src/snapshots/ruff__linter__tests__D214_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    SectionNotOverIndented: Returns
  location:
    row: 135
    column: 5
  end_location:
    row: 141
    column: 8
  fix: ~

